# demiurg

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/demiurg-app/: Cargo.toml  build.rs
crates/demiurg-app/src/: main.rs  recent.rs  reference.rs  ui.rs
crates/demiurg-core/: Cargo.toml
crates/demiurg-core/src/: clip.rs  edit.rs  lib.rs  project.rs  rig.rs  vox.rs
crates/demiurg-core/tests/: fixture_roundtrip.rs
crates/demiurg-core/tests/fixtures/: coco.kv6
crates/demiurg-i18n/: Cargo.toml
crates/demiurg-i18n/src/: lib.rs
crates/demiurg-view/: Cargo.toml
crates/demiurg-view/src/: camera.rs  kfa.rs  lib.rs  pick.rs
