[workspace]
members = [
    "crates/demiurg-core",
    "crates/demiurg-i18n",
    "crates/demiurg-view",
    "crates/demiurg-app",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NCrashed/demiurg"
homepage = "https://github.com/NCrashed/demiurg"
authors = ["Anton Gushcha <ncrashed@gmail.com>"]
# Edition 2024 requires a 1.85+ toolchain; we build on the nightly
# pinned in rust-toolchain.toml (shared with roxlap/monada for the
# wasm-threads path). No nightly-only feature is used off wasm32.
rust-version = "1.85"
readme = "README.md"
keywords = ["voxel", "editor", "kv6", "gamedev", "roxlap"]
categories = ["game-development", "graphics"]

[workspace.dependencies]
# Internal crates, by path during local dev (the version is what a
# crates.io publish pins, so it tracks workspace.package.version).
demiurg-core = { path = "crates/demiurg-core", version = "0.3.0" }
demiurg-i18n = { path = "crates/demiurg-i18n", version = "0.3.0" }
demiurg-view = { path = "crates/demiurg-view", version = "0.3.0" }

# demiurg depends on roxlap ONLY (see DESIGN.md §1). Pinned to the
# PUBLISHED crates.io 0.9.0, which carries the features demiurg needs:
# kv6 surface normals (`Kv6::from_fn_shaded`), dense-model `.vxl` export
# (`Vxl::from_dense`), and depth-tested debug lines
# (`SceneRenderer::draw_lines`). All four come from the same source so
# `Kv6`/`Sprite` types stay compatible; bump together on the next release.
#
# roxlap-formats: kv6 read/write + shaded surface extraction, .vxl export.
# roxlap-core:    Camera, OpticastSettings, SpriteLighting.
# roxlap-scene:   Scene graph the renderer composites.
# roxlap-render:  unified CPU/GPU facade (SceneRenderer, SpriteSet, draw_lines).
# roxlap-voxvideo lands at M5.
roxlap-formats = "0.9.0"
roxlap-core = "0.9.0"
roxlap-scene = "0.9.0"
roxlap-render = "0.9.0"

# Render-side world math (f64 orbit camera). Mirrors roxlap's pin so
# the workspaces share one glam.
glam = { version = "0.30", default-features = false, features = ["std"] }
# Native windowing + input for demiurg-app (M1). Matches monada-host.
winit = "0.30"
# `.demiurg` project codec (M2): serde schema + postcard wire format.
# postcard is no_std-friendly (alloc only) so it also rides to wasm (M3).
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
# egui input/output bridge for winit (M2 UI); egui itself comes via
# `roxlap_render::egui` (hud feature) so the versions can't drift.
egui-winit = { version = "0.34", default-features = false }
# Native file dialogs (open/save .kv6 and .demiurg). Web uses a
# different path (M3), so this stays a native-only dep on demiurg-app.
rfd = "0.15"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Module-name redundancy is fine for small crates that may grow
# (matches roxlap / monada).
module_name_repetitions = "allow"
