[package]
name = "demiurg-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
description = "demiurg native viewer/editor binary: winit window + roxlap render facade."
publish = false

[[bin]]
name = "demiurg"
path = "src/main.rs"

[dependencies]
demiurg-core.workspace = true
demiurg-i18n.workspace = true
demiurg-view.workspace = true
# `hud` enables roxlap's egui overlay (SceneRenderer::paint_egui) and
# re-exports `egui` so we tessellate with the exact version it paints.
roxlap-render = { workspace = true, features = ["hud"] }
roxlap-core.workspace = true
winit.workspace = true
egui-winit.workspace = true
rfd.workspace = true

[lints]
workspace = true
