[package]
name = "demiurg-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
description = "demiurg native viewer/editor binary: winit window + roxlap render facade."
publish = false

[[bin]]
name = "demiurg"
path = "src/main.rs"

[dependencies]
demiurg-core.workspace = true
demiurg-i18n.workspace = true
demiurg-view.workspace = true
# `hud` enables roxlap's egui overlay (SceneRenderer::paint_egui) and
# re-exports `egui` so we tessellate with the exact version it paints.
roxlap-render = { workspace = true, features = ["hud"] }
roxlap-core.workspace = true
winit.workspace = true
egui-winit.workspace = true
rfd.workspace = true
# Decode reference images (pixel-art guides). Only the pixel-art / game-art
# codecs, to keep the dependency lean.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "gif",
    "tga",
    "webp",
] }
# System clipboard, for "paste image as reference" (Ctrl+V). Browsers can't
# hand a dragged image to winit (it delivers only local file paths, and
# nothing at all on Wayland), so paste is the portable way to pull a web
# image in. `wayland-data-control` adds the native Wayland clipboard path
# (wlr-data-control) with an X11 fallback, so it works on both backends.
arboard = { version = "3.6", default-features = false, features = [
    "image-data",
    "wayland-data-control",
] }

[lints]
workspace = true
