[package]
name = "demiurg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Editor document model and engine-format conversion for the demiurg voxel asset editor."

[dependencies]
roxlap-formats.workspace = true
serde.workspace = true
postcard.workspace = true
# MagicaVoxel `.vox` import (handles real-world chunk variants + the
# default palette). Export is hand-rolled in `vox.rs`.
dot_vox = "5"

[lints]
workspace = true
