[package]
name = "demiurg-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "UI message catalogue and translations for the demiurg editor (native + web)."

[dependencies]

[lints]
workspace = true
